k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: wisecow-service

spec:
  selector:
    app: wisecow
  ports:
  - protocol: TCP
    port: 4499
    targetPort: 4499
  type: ClusterIP
